--- a/views/tutorials.ejs
+++ b/views/tutorials.ejs
@@ -1,26 +1,132 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-  <h2 class="p-3">Tutorials</h2>
-  <div class="list-group">
-    <% tutorials.forEach(function(tutorial) { %>
+  <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h2 class="p-3">Tutorials</h2>
+    <div class="row p-3">
+      <input
+        type="search"
+        id="search-input"
+        class="for-control rounded"
+        placeholder="Search description"
+        aria-label="search"
+        aria-describedby="search-addon"
+      />
+    </div>
+
+    <div class="row p-3">
+      <div class="col">
+        Order by Fields
+        <select
+          name="ordering"
+          id="select-ordering"
+          class="form-select"
+          aria-label="Ordering"
+        >
+          <option value="No ordering" selected>No ordering</option>
+          <option value="title">Title</option>
+          <option value="description">Description</option>
+          <option value="published">Published</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="row p-3">
+      <div class="col">
+        Ascending / Descending
+        <select
+          name="selectOrdering"
+          id="select-how-to-order"
+          class="form-select"
+        >
+          <option value="asc">Ascending</option>
+          <option value="desc">Descending</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="row p-3">
+      <div class="col">
+        Page Number
+        <input type="number" id="page-number" class="form-control rounded" />
+      </div>
+      <div class="col">
+        Page Size
+        <input type="number" id="page-size" class="form-control rounded" />
+      </div>
+    </div>
+    <div class="row p-3">
+      <input
+        type="submit"
+        class="btn btn-success"
+        onclick="buildQuery()"
+        value="Submit"
+      />
+    </div>
+
+    <div class="list-group">
+      <% tutorials.forEach(function(tutorial) { %>
       <div class="row px-3 py-1 w-100">
+        <div class="col py-1 bg-info"><%= tutorial.title %></div>
+        <div class="col py-1 bg-info"><%= tutorial.description %></div>
         <div class="col py-1 bg-info">
-          <%= tutorial.title %>
-        </div>
-        <div class="col py-1 bg-info">
-          <%= tutorial.description %>
-        </div>
-        <div class="col py-1 bg-info">
-          <input type="checkbox" id="Published" name="Published"
-          <%= tutorial.published ? 'checked' : '' %> disabled>
+          <input type="checkbox" id="Published" name="Published" <%=
+          tutorial.published ? 'checked' : '' %> disabled>
           <label for="Published">Published</label>
         </div>
       </div>
-    <% }); %>
-  </div>
-</body>
+      <% }); %>
+    </div>
+
+    <script>
+      function buildQuery() {
+        const search = document.getElementById("search-input").value;
+        const ordering = document.getElementById("select-ordering").value;
+        const order = document.getElementById("select-how-to-order").value;
+        const page = document.getElementById("page-number").value;
+        const size = document.getElementById("page-size").value;
+
+        let QueryString = "";
+        let firstFilterAdded = false;
+
+        if (ordering != "No ordering") {
+          QueryString = updateString(QueryString, firstFilterAdded);
+          QueryString += "sort=" + ordering + ":" + order;
+          firstFilterAdded = true;
+        }
+        if (search != "") {
+          QueryString = updateString(QueryString, firstFilterAdded);
+          QueryString += "description=" + search;
+          firstFilterAdded = true;
+        }
+        if (page != "") {
+          QueryString = updateString(QueryString, firstFilterAdded);
+          QueryString += "page=" + page;
+          firstFilterAdded = true;
+        }
+        if (size != "") {
+          QueryString = updateString(QueryString, firstFilterAdded);
+          QueryString += "size=" + size;
+          firstFilterAdded = true;
+        }
+
+        window.location.href = "/tutorials" + QueryString;
+        // console.log(QueryString);
+      }
+
+      function updateString(QueryString, firstAdded) {
+        if (firstAdded) {
+          QueryString += "&";
+        } else {
+          QueryString += "?";
+        }
+        return QueryString;
+      }
+    </script>
+  </body>
 </html>
